--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "rxjs": "^6.4.0",
-    "typescript": "^3.3.4000",
-    "tachyons": "^4.11.1"
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "tachyons": "^4.11.1"
+  }
 }
