--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "rxjs": "^6.4.0",
-    "typescript": "^3.3.4000"
+    "typescript": "^3.3.4000",
+    "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,8 +26,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "tachyons": "^4.11.1"
-  }
+  ]
 }
